<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.detroitlabs.cartograffi.fragments.SaveFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/save_snapshot_container"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_filename_textView"
                android:id="@+id/save_filename_textView"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/save_title_editText"
                android:hint="@string/save_filename_editText"
                android:textSize="22sp"
                android:singleLine="true"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/save_save_button"
            android:id="@+id/save_save_button"
            android:layout_gravity="center"/>

    </LinearLayout>


</LinearLayout>
